--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="ui inverted vertical footer center aligned segment">
-    <div class="ui container center">
+    <div class="ui container">
         <a href="http://jiuyuan.ren" 
         onClick="this.style.behavior='url(#default#homepage)';
                     this.setHomePage('http://jiuyuan.ren');
