--- a/_includes/search.html
+++ b/_includes/search.html
@@ -4,7 +4,7 @@
         </div>
         <div class="ui inverted fluid left icon right action input" id="search-div">
             <i class="search icon"></i>
-            <input id="search-query" type="text" placeholder="点图标立即搜索  九院人导航" autofocus="autofocus">
+            <input id="search-query" type="text" placeholder="点图标可立即搜索" autofocus="autofocus">
             <select id="search-services" class="ui compact selection dropdown">
                 {% for item in site.data.search_services %}<option id="{{ item.id }}" value="{{ item.id }}" data-url="{{ item.url }}" {% if item.transcode %}data-transcode="true" data-transcode-from="{{ item.transcode.from }}" data-transcode-to="{{ item.transcode.to }}"{% else %}data-transcode="false"{% endif %}>{{ item.name }}</option>{% endfor %}
             </select>
