--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/masthead.css' | relative_url }}">
     {% if page.active_key == 'home' and site.data.banner.memorial %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/grayscale.css' | relative_url }}">{% endif %}
     <link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
+    <title>九院人导航</title>
 </head>
 <body>
     <div class="pusher">
