bugs fix for 1st push

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,15 @@
     {% if page.active_key == 'home' and site.data.banner.memorial %}<link rel="stylesheet" type="text/css" href="{{ '/assets/css/grayscale.css' | relative_url }}">{% endif %}
     <link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
     <title>九院人导航</title>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?666fa918bf96f7507f6cd463e86f8db8";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+    </script>        
 </head>
 <body>
     <div class="pusher">
