bugs fix for 1st push

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="ui inverted vertical footer center aligned segment">
+<div class="ui inverted vertical masthead footer center aligned segment bg9">
     <div class="ui container">
         <b>{{ site.title }}&nbsp;&nbsp;❤&nbsp;&nbsp;
                 {{ site.time | date: "%Y" }} {{ site.organization }} </b>
