--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <div class="ui inverted vertical masthead footer center aligned segment bg9">
     <div class="ui container">
         <b>{{ site.title }}&nbsp;&nbsp;❤&nbsp;&nbsp;
-                {{ site.time | date: "%Y" }} {{ site.organization }} </b>
+                {{ site.time | date: "%Y" }}&nbsp; {{ site.organization }} ❤&nbsp;&nbsp; navi@jiuyuan.ren</b>
+        <b></b>
     </div>
 </div>
